welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:4: error: ')' expected but '=' found.
	if ((Math.abs(a-10))=(math.abs(b-10))){return 0}
                            ^close10:4: error: illegal start of simple expression
	if ((Math.abs(a-10))=(math.abs(b-10))){return 0}
                                             ^