welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
	if ((Math.abs(a-10))<(math.abs(b-10))){return a}
	if ((Math.abs(a-10))>(math.abs(b-10))){return b}
	if ((Math.abs(a-10))=(math.abs(b-10))){return 0}
}
